editing of index.php and config.php files

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
 	"autoloadFolder": [
 		"exceptions",
-		"controller",
-		"model",
+		"controllers",
+		"models",
 		"config/exceptions"
 	],
 	"database":  {
