edition of MVC and Exceptions folders to have a bigining letters Capitalize

--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
 	"autoloadFolder": [
-		"app/controllers",
-		"app/models",
-		"config/exceptions"
+		"app/Controllers",
+		"app/Models",
+		"config/Exceptions"
 	],
 	"database":  {
             "name": "mon-blog",
