url rewrite without /mon-blog

--- a/config/config.json
+++ b/config/config.json
@@ -4,6 +4,7 @@
 		"app/Models",
 		"config/Exceptions"
 	],
+    "baseUrl": "/mon-blog",
 	"database":  {
             "name": "mon-blog",
             "dbname": "database",
