Reorganisation of file locations (architecture)

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,9 @@
 	"autoloadFolder": [
 		"app/Controllers",
 		"app/Models",
-		"config/Exceptions"
+		"Models/Exceptions",
+		"vendor/",
+		"vendor/Route/"
 	],
     "baseUrl": "/mon-blog",
 	"database":  {
