--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "mon premier blog pour le projet-5 openClmassrooms",
     "require": {
         "michelf/php-markdown": "^2.0",
-        "twig/twig": "^3.5",
-        "altorouter/altorouter": "^2.0"
+        "twig/twig": "^3.5"
     },
     "autoload": {
         "psr-4": {
