création of new BaseController file as a Classe of BaseController

--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
 	"autoloadFolder": [
 		"app/Controllers",
 		"app/Models",
-		"Models/Exceptions",
+		"app/Exceptions",
 		"vendor/",
 		"vendor/Route/"
 	],
