implamentation of Post.php file as class and PostManager.php as post manager to access data

--- a/config/config.json
+++ b/config/config.json
@@ -2,13 +2,14 @@
 	"autoloadFolder": [
 		"app/Controllers",
 		"app/Models",
+		"Models/Manager/",
 		"app/Exceptions",
 		"vendor/",
 		"vendor/Route/"
 	],
     "baseUrl": "/mon-blog",
 	"database":  {
-            "name": "mon-blog",
+            "name": "mon_blog",
             "dbname": "database",
             "host": "localhost",
             "user": "user",
