update of all file to display all posts in post template with twig

--- a/config/config.json
+++ b/config/config.json
@@ -10,7 +10,7 @@
     "baseUrl": "/mon-blog",
 	"database":  {
             "name": "mon-blog",
-            "dbname": "mon_blog",
+            "dbname": "monblog",
             "host": "localhost",
             "user": "root",
             "password": ""
