--- a/config/config.json
+++ b/config/config.json
@@ -5,7 +5,7 @@
 		"app/Models/Manager/",
 		"app/Exceptions",
 		"vendor/",
-		"vendor/Route/"
+		"Vendor/"
 	],
     "baseUrl": "/mon-blog",
 	"database":  {
