--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,8 @@
     "description": "mon premier blog pour le projet-5 openClmassrooms",
     "require": {
         "michelf/php-markdown": "^2.0",
-        "twig/twig": "^3.5"
+        "twig/twig": "^3.5",
+        "phpmailer/phpmailer": "^6.8"
     },
     "autoload": {
         "psr-4": {
