--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "pc/mon-blog",
-    "description": "mon premier blog pour le projet-5 openClmassrooms",
+    "description": "mon premier blog pour le projet-5 openClassrooms",
     "require": {
         "michelf/php-markdown": "^2.0",
         "twig/twig": "^3.5",
@@ -19,8 +19,9 @@
     },
     "authors": [
         {
-            "name": "Mike Agbelou",
+            "name": "Adjoukou Agbelou",
             "email": "mike.agbelou@gmail.com"
         }
-    ]
+    ],
+    "license": "dmdprod.com 2023-fr by Adjoukou AGBELOU"
 }
