--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
-Options +FollowSymLinks
+<IfModule mod_rewrite.c>
 RewriteEngine On
-
-RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+RewriteBase /mon-blog
+RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
-
-RewriteRule ^ index.php [L]
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /mon-blog/index.php [L]
+</IfModule>
