--- a/.htaccess
+++ b/.htaccess
@@ -5,5 +5,5 @@ RewriteBase /mon-blog
 RewriteRule ^index\.php$ - [L]
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule . /mon-blog/index.php [L]
+RewriteRule . /mon-blog/public/index.php [L]
 </IfModule>
